--- a/src/styles/components/products/products.css
+++ b/src/styles/components/products/products.css
@@ -8,6 +8,7 @@
   overflow: hidden;
 }
 .products_hero-img {
+  opacity: 0;
   filter: brightness(1);
   width: 100%;
   height: 100%;
@@ -30,6 +31,7 @@
 }
 
 .category_products_header {
+  opacity: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -126,6 +128,7 @@
 }
 
 .allproducts_paren {
+  opacity: 0;
   flex-shrink: 0;
   width: 100%;
   display: grid;
