--- a/src/styles/components/home/hero.css
+++ b/src/styles/components/home/hero.css
@@ -27,6 +27,19 @@
   height: 0;
 }
 
+.home_hero_video {
+  pointer-events: none;
+}
+
+.home_hero_video::-webkit-media-controls {
+  display: none !important;
+}
+
+.home_hero_video::-webkit-media-controls-play-button {
+  display: none !important;
+}
+
+
 @media (min-width: 750px) {
   .dummy_hero_div {
     height: 66vh;
